# musa-650-spring2026

./: README.md  pyproject.toml
week02/: README.md
week03/: README.md
