[project]
name = "musa-650-spring-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.1",
    "dask-gateway>=2025.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "odc-stac>=0.5.0",
    "pandas>=2.3.3",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.20.0",
    "stackstac>=0.5.1",
    "xarray>=2025.12.0",
]
