[project]
name = "musa-650-spring-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.1",
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "dask>=2025.12.0",
    "dask-gateway>=2025.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.4.0",
    "odc-stac>=0.5.0",
    "pandas>=2.3.3",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rioxarray>=0.20.0",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "stackstac>=0.5.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]
